[package]
name = "file-md5-wasm"
version = "0.2.0"
edition = "2021"
homepage = "https://github.com/quansitech/file-md5-wasm"
authors = ["tiderjian"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[dependencies]
hex = "0.4.3"
js-sys = "0.3.64"
md-5 = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features= ["File", "ReadableStream", "ReadableStreamDefaultReader"] }
